# Diamoneum

./: .appveyor.yml  .clang-format  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  release-candidate.md
.github/workflows/: matrix.yml
cmake/project/: CPackConfig.cmake
include/: CryptoNote.h  CryptoTypes.h  INode.h  IObservable.h  IStreamSerializable.h  ITransfersContainer.h  ITransfersSynchronizer.h
lib/: CMakeLists.txt
lib/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerData.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h  IBlockchainExplorer.h  IBlockchainObserver.h
lib/Breakpad/: Breakpad.cpp  Breakpad.h
lib/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.h  ColouredMsg.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.cpp  DnsTools.h  FileMappedVector.h  IInputStream.h  IOutputStream.h  JsonValue.cpp  JsonValue.h  Lazy.h  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  StringBuffer.h  StringInputStream.cpp  StringInputStream.h  (+17 more)
lib/CryptoNoteCore/: Account.cpp  Account.h  BlockIndex.cpp  BlockIndex.h  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainMessages.cpp  BlockchainMessages.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteStatInfo.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  Difficulty.cpp  Difficulty.h  IBlock.h  IBlockchainStorageObserver.h  ICore.h  ICoreObserver.h  IMinerHandler.h  ITimeProvider.h  ITransaction.h  ITransactionValidator.h  ITxPoolObserver.h  (+21 more)
lib/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
lib/Global/: Checkpoints.h  Constants.h  CryptoNoteConfig.h
lib/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
lib/NodeRpcProxy/: NodeRpcProxy.cpp
lib/Rpc/: RpcServer.cpp  RpcServer.h
lib/Transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  CommonTypes.h  IBlockchainSynchronizer.h  IObservableImpl.h  SynchronizationState.cpp  SynchronizationState.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp  TransfersContainer.h  TransfersSubscription.cpp  TransfersSubscription.h  TransfersSynchronizer.cpp  TransfersSynchronizer.h  TypeHelpers.h
lib/Wallet/: WalletSerializationV1.cpp  WalletSerializationV2.cpp
lib/WalletLegacy/: IWalletLegacy.h
lib/crypto/: crypto-ops-data.c  crypto-ops.c  crypto.cpp  crypto.h  generic-ops.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  initializer.h  random.c  random.h  slow-hash.cpp  slow-hash.inl  tree-hash.c
src/: CMakeLists.txt
src/BinaryInfo/: connectivity_tool.rc  daemon.rc
src/ConnectivityTool/: ConnectivityTool.cpp
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/Miner/: BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerEvent.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/Optimizer/: Optimizer.cpp
src/PaymentGateService/: ConfigurationManager.cpp  ConfigurationManager.h  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  RpcNodeConfiguration.cpp  RpcNodeConfiguration.h  main.cpp
src/SimpleWallet/: PasswordContainer.cpp  PasswordContainer.h  SimpleWallet.cpp  SimpleWallet.h
tests/: CMakeLists.txt
tests/UnitTests/: ICoreStub.cpp  TestFormatUtils.cpp  TestProtocolPack.cpp  TestWalletLegacy.cpp
utils/Diamoneum-control-shell/: diamcd.sh  diamcs.sh
utils/build_scripts/: build-release.sh  easy_installer.sh  multi_installer.sh  windows.bat
utils/conf/: qwertycoind.conf
utils/systemd/: diamd.service  diamoneumd.service
